--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "html5-qrcode": "^2.3.8",
+    "@yudiel/react-qr-scanner": "^1.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
